

syntax = "proto3";

option go_package = "server-push/notification_proto";
option java_multiple_files = true;
option java_package = "notification_proto";
option java_outer_classname = "NotificationProto";

package notification_proto;

// The Notification service definition.
service Notification {
  // ConnectToServer connects to server with the ClientDetail message
  // this will in response receive stream of Chunk
  rpc ConnectToServer(ClientDetail) returns (stream Chunk) {}
}


// ClientDetail message
message ClientDetail {
  string ID = 1;
}

// NotificationMessage is the message sent as notification from the server to the client
message NotificationMessage{
  string message = 1;
  int64 time = 2; 
}

message Chunk {
        bytes Content = 1;
}

enum UploadStatusCode {
        Unknown = 0;
        Ok = 1;
        Failed = 2;
}

message UploadStatus {
        string Message = 1;
        UploadStatusCode Code = 2;
}
